--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	compile group: 'org.mapstruct', name: 'mapstruct-jdk8', version: '1.2.0.Final'
 	compile group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.2.0.Final'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '1.5.9.RELEASE'
+	compile group: 'com.google.guava', name: 'guava', version: '24.0-jre'
 	runtime('mysql:mysql-connector-java')
 	compileOnly('org.projectlombok:lombok')
 	compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
