--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	runtime('mysql:mysql-connector-java')
 	compileOnly('org.projectlombok:lombok')
 	compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+	compile group: 'com.mangofactory', name: 'swagger-springmvc', version: '1.0.2'
 	testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 	testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
