--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	runtime('org.springframework.boot:spring-boot-devtools')
 	compile group: 'com.h2database', name: 'h2', version: '1.4.196'
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '1.5.10.RELEASE'
 	compile group: 'org.mapstruct', name: 'mapstruct-jdk8', version: '1.2.0.Final'
 	compile group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.2.0.Final'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '1.5.9.RELEASE'
