--- a/build.gradle
+++ b/build.gradle
@@ -36,9 +36,12 @@ dependencies {
 	runtime('mysql:mysql-connector-java')
 	compileOnly('org.projectlombok:lombok')
 	compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+	compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.2.1.RELEASE'
 	compile group: 'com.mangofactory', name: 'swagger-springmvc', version: '1.0.2'
 	compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 	compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
+	compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.2.1.RELEASE'
 	testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile group: 'org.springframework.security', name: 'spring-security-test', version: '5.0.3.RELEASE'
 }
